radarr/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: radarr.192.168.50.143.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: radarr-service
          servicePort: 80
